Update fontconfig to ba206df9b9a7ca300265f650842c1459ff7c634a

This fixes settings from ~/.fonts.conf not being respected.

BUG=882577
R=derat

Change-Id: I92a2fad0918ef3f4e5a9758efcc437beb3c20850
Reviewed-on: https://chromium-review.googlesource.com/1222728
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590878}
Former-commit-id: d9d67cb2c7edcd68d9735a3ef349714d6b69cd3e