third_party/fontconfig/include/src/fcalias.h
@@ -412,6 +412,8 @@ extern __typeof (FcUtf16ToUcs4) IA__FcUtf16ToUcs4 FC_ATTRIBUTE_VISIBILITY_HIDDEN
 #define FcUtf16ToUcs4 IA__FcUtf16ToUcs4
 extern __typeof (FcUtf16Len) IA__FcUtf16Len FC_ATTRIBUTE_VISIBILITY_HIDDEN;
 #define FcUtf16Len IA__FcUtf16Len
+extern __typeof (FcStrBuildFilename) IA__FcStrBuildFilename FC_ATTRIBUTE_VISIBILITY_HIDDEN;
+#define FcStrBuildFilename IA__FcStrBuildFilename
 extern __typeof (FcStrDirname) IA__FcStrDirname FC_ATTRIBUTE_VISIBILITY_HIDDEN;
 #define FcStrDirname IA__FcStrDirname
 extern __typeof (FcStrBasename) IA__FcStrBasename FC_ATTRIBUTE_VISIBILITY_HIDDEN;
